# universal-watchlist-synchronizer

./: .dockerignore  .gitignore  AGENTS.md  CICD.md  README.md  compose.yaml
workers/vod-filter/: .dockerignore  Dockerfile  build-complete.bat  build.bat  cache_inspect.py  cleanup_removed_movies.py  compare_watchlist_sources.py  continuous_sync.py  docker-compose.yml  example.env  healthcheck.py  pyproject.toml  reconcile_sync.py  requirements-production.txt  requirements.txt  run-library-sync.bat  run.py  run_all_syncs.py  setup-scheduled-tasks.ps1  sync_library_to_watchlist.py  sync_movies.py  validate_providers.py  vod-filter-complete.spec  vod-filter.spec
workers/vod-filter/src/: __init__.py  config.py  main.py
workers/vod-filter/src/clients/: __init__.py  letterboxd_client.py  plex_client.py  radarr_client.py  tmdb_client.py  watchlist_app_client.py
workers/vod-filter/src/models/: __init__.py  movie.py  schema.sql  streaming_provider.py  sync_state.py  vod_availability.py
workers/vod-filter/src/services/: __init__.py  cache_service.py  letterboxd_service.py  movie_sync_collector.py  movie_sync_executor.py  movie_sync_policy.py  movie_sync_report.py  plex_service.py  radarr_service.py  sync_reconciliation.py  tmdb_service.py
workers/vod-filter/src/utils/: __init__.py  file_lock.py  logging.py  retry.py
workers/vod-filter/tests/: __init__.py
workers/vod-filter/tests/vod_filter/: test_cache_inspect.py  test_cleanup_removed_movies.py  test_compare_watchlist_sources.py  test_config.py  test_continuous_sync.py  test_file_lock.py  test_logging.py  (+18 more)
(+467 files in other folders)
