[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vod-filter"
version = "1.0.0"
description = "Smart VOD-Aware Import List Manager for Letterboxd, Radarr, and Plex"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "letterboxdpy>=0.1.0",
    "tmdbv3api>=1.9.0",
    "pyarr>=5.1.0",
    "PlexAPI>=4.15.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
vod-filter = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
